Formatic fix code quality issue